--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devbookhq/splitter": "^1.4.2",
     "@mdxeditor/editor": "^1.14.2",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cm6-theme-basic-dark": "^0.2.0",
+    "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
+    "react-splitter-layout": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
