--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-splitter-layout": "^4.0.0",
+    "sass": "^1.69.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
