--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cm6-theme-basic-dark": "^0.2.0",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
+    "react-dialog-confirm": "^1.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
